--- a/source/_posts/函数节流.md
+++ b/source/_posts/函数节流.md
@@ -1,9 +1,10 @@
 ---
 title: 函数节流
-tags: [js]
+date: 2017-09-12
+tags: [原生js]
 categories: js
 ---
->以下描述均为函数防抖， 《JavaScript高级程序设计有误》
+>以下描述均为函数防抖， 《JavaScript高级程序设计》有误
 #### 为什么会有函数节流？
 
 先看一段代码：
