--- a/source/_posts/前端性能优化.md
+++ b/source/_posts/前端性能优化.md
@@ -1,7 +1,8 @@
 ---
 title: 前端性能优化
-tags: [前端性能]
-categories: 前端性能
+date: 2017-09-24
+tags: [性能优化]
+categories: 性能优化
 ---
 ![性能优化思考维度.jpg](http://upload-images.jianshu.io/upload_images/4869616-36154be394a65dfd.jpg?imageMogr2/auto-orient/strip)
 
