--- a/source/_posts/前端模块化（一）.md
+++ b/source/_posts/前端模块化（一）.md
@@ -1,6 +1,7 @@
 ---
 title: 前端模块化（一）
-tags: [js]
+date: 2017-09-19
+tags: [原生js]
 categories: js
 ---
 其实作为一个秋招狗，前端还没写够一年就来大谈特谈这些历史性问题，的确是不够格的，但是这又是学习前端学习者无法避免的一个问题，加上面试提问颇多，于是来总结一二。
